Add pmf hook.

fix PR/49783 USB WiFi ural0 rejects hw.acpi.sleep.state=3.